--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* support magnet link parameters with number siffixes
 	* consistently use "lt" namespace in examples and documentation
 	* fix Mingw build to use native cryptoAPI
 
