--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix python bindings for peer_info
 	* support creating symlinks, for torrents with symlinks in them
 	* fix error in seed_mode flag
 	* support magnet link parameters with number siffixes
