--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+1.2.1 release
+
 	* add dht_pkt_alert and alerts_dropped_alert to python bindings
 	* fix python bindins for block_uploaded_alert
 	* optimize resolving duplicate filenames in loading torrent files
