fix error handling of moving storage to a drive letter that isn't mounted

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix error handling of moving storage to a drive letter that isn't mounted
 	* fix HTTP Host header when using proxy
 
 1.2.1 release
