--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* make peer_info::client a byte array in python binding
 	* pick contiguous pieces from peers with high download rate
 	* fix error handling of moving storage to a drive letter that isn't mounted
 	* fix HTTP Host header when using proxy
