--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,20 @@
+2.0 release
+
+	* added support for BitTorrent v2 (see docs/upgrade_to_2.0.html)
+	* create_torrent() pad_file_limit parameter removed
+	* create_torrent() merkle- and optimize-alignment flags removed
+	* merkle_tree removed from add_torrent_params
+	* announce_entry expose information per v1 and v2 info-hash announces
+	* torrent_removed_alert, torrent_deleted_alert, torrent_delete_failed_alert: info_hash member is no longer a sha-1 hash, but (deprecated) implicitly convertible to one
+	* undeprecate error_file_metadata for torrent errors related to its metadata
 	* remove support for adding a torrent under a UUID (used for previous RSS
 	* support)
 	* remove deprecated feature to add torrents by file:// URL
 	* remove deprecated feature to download .torrent file from URL
 	* requires boost >= 1.66 to build
 	* update networking API to networking TS compatible boost.asio
+
+1.2.2 release
 
 1.2.1 release
 
