--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+1.2.2 release
+
 	* fix regression in &left= reporting when adding a seeding torrent
 	* fix integer overflow in http parser
 	* improve sanitation of symlinks, to support more complex link targets
