--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix error in treatment of move_storage() flags
 	* fix division by zero in anti-leech choker
 	* fix chunked http header validation
 	* fix use-after-free in SSL shutdown
