--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix handling of torrents with too large pieces
 	* fixed division by zero in anti-leech choker
 	* fixed bug in torrent_info::swap
 
