add handling on invalid piece index to torrent_handle::have_piece()

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* add handling on invalid piece index to torrent_handle::have_piece()
 	* fix error in treatment of move_storage() flags
 	* fix division by zero in anti-leech choker
 	* fix chunked http header validation
