--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+1.1.14 release
+
 	* add handling on invalid piece index to torrent_handle::have_piece()
 	* fix error in treatment of move_storage() flags
 	* fix division by zero in anti-leech choker
