--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* promote errors in parsing listen_interfaces to post listen_failed_alert
 	* fix bug in protocol encryption/obfuscation
 	* fix buffer overflow in SOCKS5 UDP logic
 	* fix issue of rapid calls to file_priority() clobbering each other
