--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
 	* requires boost >= 1.66 to build
 	* update networking API to networking TS compatible boost.asio
 	* overhauled disk I/O subsystem to use memory mapped files (where available)
+	* libtorrent now requires C++14 to build
 
 	* fix issue of rapid calls to file_priority() clobbering each other
 	* clear tracker errors on success
