--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+	* add new socks5_alert to trouble shoot SOCKS5 proxies
+
 1.2.3 release
 
 	* fix erroneous event=completed tracker announce when checking files
