--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2.0 release
 
-	* add clientdata to add_torrent_params, torrent, and torrent_removed_alert
+	* update userdata in add_torrent_params to be type-safe and add to torrent_handle
 	* add ip_filter to session_params
 	* added support for wolfSSL for SHA-1 hash and HTTPS (no Torrents over SSL)
 	* requires OpenSSL minimum version 1.0.0 with SNI support
