--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* don't start DHT nodes on loopback device (when explicitly listening on loopback)
 	* add new socks5_alert to trouble shoot SOCKS5 proxies
 
 1.2.3 release
