--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* back-off tracker hostname looksups resulting in NXDOMAIN
 	* lower SOCKS5 UDP keepalive timeout
 	* fix external IP voting for multi-homed DHT nodes
 	* deprecate broadcast_lsd setting. Just use multicast
