--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* deprecate broadcast_lsd setting. Just use multicast
 	* deprecate upnp_ignore_nonrouters setting
 	* don't attempt sending event=stopped if event=start never succeeded
 	* make sure &key= stays consistent between different source IPs (as mandated by BEP7)
