--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+1.2.4 release
+
 	* fix suggest_read_cache setting
 	* back-off tracker hostname looksups resulting in NXDOMAIN
 	* lower SOCKS5 UDP keepalive timeout
