further refinement to internal get_gateway function causing issues for certain network setups

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+	* further refinement to internal get_gateway function causing issues for certain network setups
+
 1.2.4 release
 
 	* fix binding TCP and UDP sockets to the same port, when specifying port 0
