--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix issue with knowing which interfaces to announce to trackers and DHT
 	* undeprecate settings_pack::dht_upload_rate_limit
 
 1.2.4 release
