--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* support TCP_NOTSENT_LOWAT on Linux
 	* fix correct interface binding of local service discovery multicast
 	* fix issue with knowing which interfaces to announce to trackers and DHT
 	* undeprecate settings_pack::dht_upload_rate_limit
