--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix LSD over IPv6
 	* support TCP_NOTSENT_LOWAT on Linux
 	* fix correct interface binding of local service discovery multicast
 	* fix issue with knowing which interfaces to announce to trackers and DHT
