--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* add build option to disable share-mode
 	* support validation of HTTPS trackers
 	* deprecate strict super seeding mode
 	* make UPnP port-mapping lease duration configurable
