--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2.0 release
 
+	* remove bittyrant choking algorithm
 	* update userdata in add_torrent_params to be type-safe and add to torrent_handle
 	* add ip_filter to session_params
 	* added support for wolfSSL for SHA-1 hash and HTTPS (no Torrents over SSL)
