fix double call to bind() when setting outgoing_interfaces

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix issue with outgoing_interfaces setting, where bind() would be called twice
 	* add build option to disable share-mode
 	* support validation of HTTPS trackers
 	* deprecate strict super seeding mode
