--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* simplify proxy handling. A proxy now overrides listen_interfaces
 	* fix issues when configured to use a non-default choking algorithm
 	* fix issue in reading resume data
 	* revert NXDOMAIN change from 1.2.4
