--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* revert NXDOMAIN change from 1.2.4
 	* don't open any listen sockets if listen_interfaces is empty or misconfigured
 	* fix bug in auto disk cache size logic
 	* fix issue with outgoing_interfaces setting, where bind() would be called twice
