--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix issues when configured to use a non-default choking algorithm
 	* fix issue in reading resume data
 	* revert NXDOMAIN change from 1.2.4
 	* don't open any listen sockets if listen_interfaces is empty or misconfigured
