increase default tracker timeout

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* increase default tracker timeout
 	* retry failed socks5 server connections
 	* allow UPnP lease duration to be changed after device discovery
 	* fix IPv6 address change detection on Windows
