make upnp lease duration configurable on the fly

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* allow UPnP lease duration to be changed after device discovery
 	* fix IPv6 address change detection on Windows
 
 1.2.6 released
