--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* undeprecate upnp_ignore_nonrouters (but refering to devices on our subnet)
 	* increase default tracker timeout
 	* retry failed socks5 server connections
 	* allow UPnP lease duration to be changed after device discovery
