--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* limit number of concurrent HTTP announces
 	* fix queue position for force_rechecking a torrent that is not auto-managed
 	* improve rate-based choker documentation, and minor tweak
 	* undeprecate upnp_ignore_nonrouters (but refering to devices on our subnet)
