--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* improve rate-based choker documentation, and minor tweak
 	* undeprecate upnp_ignore_nonrouters (but refering to devices on our subnet)
 	* increase default tracker timeout
 	* retry failed socks5 server connections
