--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2.0 release
 
+	* removed deprecated lazy_entry/lazy_bdecode
 	* stats_alert deprecated
 	* remove bittyrant choking algorithm
 	* update userdata in add_torrent_params to be type-safe and add to torrent_handle
