--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* add function to clear the peer list for a torrent
 	* fix resume data functions to save/restore more torrent flags
 	* limit number of concurrent HTTP announces
 	* fix queue position for force_rechecking a torrent that is not auto-managed
