--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Written by Arvid Norberg. Copyright (c) 2003-2019
+Written by Arvid Norberg. Copyright (c) 2003-2020
 
 Contributions by:
 Andrei Kurushin
@@ -19,7 +19,7 @@ Thanks to (github user) nervoir for bug reports
 
 Thanks to Reimond Retz for bugfixes, suggestions and testing
 
-Thanks to University of Umeå for providing development and test hardware.
+Thanks to University of Ume≈í for providing development and test hardware.
 
 Project is hosted by Github
 
