--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+1.2.7 released
+
 	* add set_alert_fd in python binding, to supersede set_alert_notify
 	* fix bug in part files > 2 GiB
 	* add function to clear the peer list for a torrent
