--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fixed issue where pop_alerts() could return old, invalid alerts
 	* fix issue when receiving have-all message before the metadata
 	* don't leave lingering part files handles open
 	* disallow calling add_piece() during checking
