--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+1.2.8 released
+
 	* don't time out tracker announces as eagerly while resolving hostnames
 	* fix NAT-PMP shutdown issue
 	* improve hostname lookup by merging identical lookups
