allow overlong files again, when checking resume data. ignore files with priority 0 in verifying resume data, as those files may be in a partfile. add tests to cover those cases

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+	* fixed resume data regression for seeds with prio 0 files
+
 1.2.8 released
 
 	* validate UTF-8 encoding of client version strings from peers
