--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix detection of hard-links not being supported by filesystem
 	* fixed resume data regression for seeds with prio 0 files
 
 1.2.8 released
