update changelog for 1.2.9

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+1.2.9 released
+
+	* add macro TORRENT_CXX11_ABI for clients building with C++14 against
+	  libtorrent build with C++11
+	* refreshed m4 scripts for autotools
+	* removed deprecated wstring overloads on non-windows systems
+	* drop dependency on Unicode's ConvertUTF code (which had a license
+	  incompatible with Debian)
+	* fix bugs exposed on big-endian systems
 	* fix detection of hard-links not being supported by filesystem
 	* fixed resume data regression for seeds with prio 0 files
 
