--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+1.2.10 released
+
 	* fix regression in python binding for move_storage()
 	* improve stat_file() performance on Windows
 	* fix issue with loading invalid torrents with only 0-sized files
