--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+	* use a different error code than host-unreachable, when skipping tracker announces
+
 1.2.10 released
 
 	* fix regression in python binding for move_storage()
