--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 
+	* fix session-pause causing tracker announces to fail
 	* fix peer-exchange flags bug
 	* allow saving resume data before metadata has been downloaded (for magnet links)
 	* record blocks in the disk queue as downloaded in the resume data
