--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 
+	* add session::paused flag, and the ability to construct a session in paused mode
 	* fix session-pause causing tracker announces to fail
 	* fix peer-exchange flags bug
 	* allow saving resume data before metadata has been downloaded (for magnet links)
