fix mtime field when creating single-file v2 torrents

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix mtime field when creating single-file v2 torrents
 	* fix performance regression in checking files
 	* disable use of SetFileValidData() by default (windows). A new setting
 	  allows enabling it
