--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 
+	* fix bug creating torrents with symbolic links
 	* remove special case to save metadata in resume data unconditionally when added throught magnet link
 	* fix bugs in mutable-torrent support (reusing identical files from different torrents)
 	* fix incorrectly inlined move-assignment of file_storage
