--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* add feature to session_proxy to query status during shutdown
 	* fix attribute in single-file v2 torrent creation
 	* fix padding for empty files in v2 torrent creation
 	* add function to ask a file_storage whether it's v2 or not
