--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+
+* 2.0.1 released
+
 	* fix attribute in single-file v2 torrent creation
 	* fix padding for empty files in v2 torrent creation
 	* add function to ask a file_storage whether it's v2 or not
@@ -6,7 +9,7 @@
 	* disable use of SetFileValidData() by default (windows). A new setting
 	  allows enabling it
 
-2.0 release
+2.0 released
 
 	* dropped depenency on iconv
 	* deprecate set_file_hash() in torrent creator, as it's superceded by v2 torrents
