--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix uTP issue acking FIN packets
 	* validate HTTPS certificates by default (trackers and web seeds)
 	* load SSL certificates from windows system certificate store, to authenticate trackers
 	* introduce mitigation for Server Side Request Forgery in tracker and web seed URLs
