fix bug in python binding for dht_put_mutable_item

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix bug in python binding for dht_put_mutable_item
 	* fix uTP issue acking FIN packets
 	* validate HTTPS certificates by default (trackers and web seeds)
 	* load SSL certificates from windows system certificate store, to authenticate trackers
