--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix python binding for "value" in dht put alerts
 	* fix bug in python binding for dht_put_mutable_item
 	* fix uTP issue acking FIN packets
 	* validate HTTPS certificates by default (trackers and web seeds)
