allow not setting a creation date in create_torrent (but default to current timestamp). Provide more prominent shortcuts to ask a torrent_info about whether it has v1 and v2 metadata. make torrent_info::piece_layer() also return a hash for small files (that only have the root-hash).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+	* add v1() and v2() functions to torrent_info
+	* fix piece_layers() to work for single-piece files
 	* fix python binding regression in session constructor flags
 	* fix unaligned piece requests in mmap_storage
 	* improve client_data_t ergonomics
