--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+1.2.12 released
+
 	* fix loading of DHT node ID from previous session on startup
 	* use getrandom(), when available, and fall back to /dev/urandom
 	* fix python binding for "value" in dht put alerts
