fix encoding in AUTHORS file (and update it a bit)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Written by Arvid Norberg. Copyright (c) 2003-2018
+Written by Arvid Norberg. Copyright (c) 2003-2021
 
 Contributions by:
 Andrei Kurushin
@@ -23,7 +23,7 @@ Peter Koeleman
 
 Thanks to Reimond Retz for bugfixes, suggestions and testing
 
-Thanks to University of UmeŒ for providing development and test hardware.
+Thanks to University of Umeå for providing development and test hardware.
 
-Project is hosted by sourceforge.
+Project is hosted by Github, previously by sourceforge.
 
