--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix overflow issue when rlimit_nofile is set to infinity
 	* fix issue in python binding interpreting int settings > INT_MAX
 	* Fix cxxflags and linkflags injection via environment variables
 
