--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix integer overflow when setting a high DHT upload rate limit
 	* improve Path MTU discovery logic in uTP
 	* fix overflow issue when rlimit_nofile is set to infinity
 	* fix issue in python binding interpreting int settings > INT_MAX
