--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix loading non-ascii filenames on windows with torrent_info constructor (2.0 regression)
 	* add std::hash<> specialization for info_hash_t
 	* fix integer overflow in hash_picker and properly restrict max file sizes in torrents
 	* strengthen SSRF mitigation for web seeds
