--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 1.2.13 released
 
+	* fix data race in python binding of session::get_torrent_status()
 	* fix need_save_resume_data() for renaming files, share-mode, upload-mode,
 	  disable- pex, lsd, and dht.
 	* fix incoming TCP connections when using tracker-only proxy
