--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1.2.13 released
 
+	* fix need_save_resume_data() for renaming files, share-mode, upload-mode,
+	  disable- pex, lsd, and dht.
 	* fix incoming TCP connections when using tracker-only proxy
 	* fix issue with paths starting with ./
 	* fix integer overflow when setting a high DHT upload rate limit
