--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix issue where set_piece_hashes() would not propagate file errors
 	* add missing python binding for event_t
 	* add work-around for systems without fseeko() (such as Android)
 	* add convenience header libtorrent/libtorrent.hpp
