--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* add file_prio_alert, posted when file priorities are updated
 	* fix issue where set_piece_hashes() would not propagate file errors
 	* add missing python binding for event_t
 	* add work-around for systems without fseeko() (such as Android)
