--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 1.2.13 released
 
+	* Use /etc/ssl/cert.pem to validate HTTPS connections on MacOS
 	* allow no-interest timeouts of peer connections before all connections slots are full
 	* fix issue where a DHT message would count as an incoming connection
 	* fix issue when failing to parse outgoing_interfaces setting
