--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+1.2.14 released
+
 	* fix issue of accruing unlimited DHT node candidates when DHT is disabled
 	* fix bug in parsing chunked encoding
 	* fix incorrect reporting of active_duration when entering graceful-pause
