fix piece picker bug causing double-picks with prefer-contiguous enabled

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix piece picker bug causing double-picks with prefer-contiguous enabled
 	* expose session_params in python bindings
 	* fix (deprecated) use of add_torrent_params::info_hash
 	* fix issue creating and loading v2 torrents with empty files. Improves
