--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2.0.4 released
+
 	* fix piece picker bug causing double-picks with prefer-contiguous enabled
 	* expose session_params in python bindings
 	* fix (deprecated) use of add_torrent_params::info_hash
