don't require piece layers in v2 torrent files, but ensure they are valid if they are present

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* allow loading v2 .torrent files without piece layer
 	* fix issue with adding v2 torrents with invalid file root hash
 
 * 2.0.4 released
