--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+	* make UTF-8 sanitization a bit stricter. This will re-write invalid UTF-8
+	  code points encoding surrogate pairs
 	* fix restoring last_seen_complete from resume data
 	* fix issue on MacOS where the DHT was not restarted on a network-up notification
 	* make remove_torrent flags be treated as flags (instead of an enum)
