restore path character encoding conversion for non UTF-8 locales on linux

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* restore path character encoding conversion for non UTF-8 locales on linux
 	* fix use-after-free bug in make_magnet_uri
 	* add write_torrent_file() to produce a .torrent file from add_torrent_params
 	* allow loading v2 .torrent files without piece layer
