--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix stalled pieces on disk-full errors
 	* fix build configuration issue on NetBSD, OpenBSD and DragonFly
 	* make UTF-8 sanitization a bit stricter. This will re-write invalid UTF-8
 	  code points encoding surrogate pairs
